preliminary styling of static pieces

--- a/index.html
+++ b/index.html
@@ -5,10 +5,41 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
         <title>Hangman Game</title>
+
+        <link
+            rel="stylesheet"
+            href="https://pro.fontawesome.com/releases/v5.8.2/css/all.css"
+            integrity="sha384-xVVam1KS4+Qt2OrFa+VdRUoXygyKIuNWUUUBZYv+n27STsJ7oDOHJgfF0bNKLMJF"
+            crossorigin="anonymous"
+        />
+        <link rel="stylesheet" href="assets/css/main.css" />
     </head>
     <body>
-        <header></header>
-        <main></main>
-        <footer></footer>
+        <header>
+            <div class="container center">
+                <h1>The Hangman Game:</h1>
+                <h2>Web Technologies</h2>
+            </div>
+        </header>
+        <main>
+            <div class="middle">
+                <div id="app">
+                    Game goes here
+                </div>
+            </div>
+        </main>
+        <footer>
+            <div class="middle">
+                Nich Secord &copy;2019
+                <div class="social">
+                    <a href="https://www.github.com/mmcxii" target="new" class="social-link">
+                        <i class="fab fa-github"></i>
+                    </a>
+                    <a href="https://www.linkedin.com/in/mmcxii/" target="new" class="social-link">
+                        <i class="fab fa-linkedin-in"></i>
+                    </a>
+                </div>
+            </div>
+        </footer>
     </body>
 </html>
