began styling on app window

--- a/index.html
+++ b/index.html
@@ -18,13 +18,28 @@
         <header>
             <div class="container center">
                 <h1>The Hangman Game:</h1>
-                <h2>Web Technologies</h2>
+                <h2>{Theme Undecided}</h2>
             </div>
         </header>
         <main>
             <div class="middle">
                 <div id="app">
-                    Game goes here
+                    <div class="row">
+                        <span id="answer">Answer goes here</span>
+                    </div>
+                    <div class="row">
+                        <div class="col">
+                            <img src="" alt="" id="answer-pic" />
+                        </div>
+                        <div class="col">
+                            <section id="directions">
+                                Press any key to begin.
+                            </section>
+                            <section id="win-count">
+                                Wins:
+                            </section>
+                        </div>
+                    </div>
                 </div>
             </div>
         </main>
