--- a/index.html
+++ b/index.html
@@ -32,12 +32,15 @@
                         <div class="container">
                             <div class="row">
                                 <div class="col-md-12 center">
-                                    <span id="answer">Answer Goes Here</span>
+                                    <h3 id="answer-field">Good Luck!</h3>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col-md-6 col-custom">
-                                    <img id="answer-pic" />
+                                    <img
+                                        id="answer-pic"
+                                        src="https://via.placeholder.com/200x100?text=Placeholder"
+                                    />
                                 </div>
                                 <div class="col-md-6 col-custom">
                                     <div class="row row-custom">
@@ -53,9 +56,7 @@
                                             <span id="wins">
                                                 Wins:
                                                 <br />
-                                                <span id="win-counter">
-                                                    0
-                                                </span>
+                                                <span id="win-counter-field"></span>
                                             </span>
                                         </div>
                                     </div>
@@ -65,9 +66,7 @@
                                             <span id="current-word">
                                                 Current Word:
                                                 <br />
-                                                <span id="current-word-field">
-                                                    _ _ _ _ _ _
-                                                </span>
+                                                <span id="current-word-field"></span>
                                             </span>
                                         </div>
                                     </div>
@@ -77,9 +76,7 @@
                                             <span id="guesses-remaining">
                                                 Number of Guesses Remaining:
                                                 <br />
-                                                <span id="num-guesses">
-                                                    15
-                                                </span>
+                                                <span id="num-guesses-field"></span>
                                             </span>
                                         </div>
                                     </div>
@@ -89,9 +86,7 @@
                                             <span id="used-letters">
                                                 Letters Already Guessed:
                                                 <br />
-                                                <span id="used-letters">
-                                                    A E I O U
-                                                </span>
+                                                <span id="used-letters-field"></span>
                                             </span>
                                         </div>
                                     </div>
@@ -116,5 +111,6 @@
                 </div>
             </div>
         </footer>
+        <script src="assets/js/app.js"></script>
     </body>
 </html>
