app largly functional, work to be done on remaining counter

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <header>
             <div class="container center">
                 <h1>The Hangman Game:</h1>
-                <h2>{Theme Undecided}</h2>
+                <h2>Adult Beverages</h2>
             </div>
         </header>
         <main>
@@ -37,10 +37,7 @@
                             </div>
                             <div class="row">
                                 <div class="col-md-6 col-custom">
-                                    <img
-                                        id="answer-pic"
-                                        src="https://via.placeholder.com/200x100?text=Placeholder"
-                                    />
+                                    <img id="answer-pic" />
                                 </div>
                                 <div class="col-md-6 col-custom">
                                     <div class="row row-custom">
