added loser screen

--- a/index.html
+++ b/index.html
@@ -21,8 +21,16 @@
     <body>
         <header>
             <div class="container center">
-                <h1>The Hangman Game:</h1>
-                <h2>Adult Beverages</h2>
+                <div class="row">
+                    <div class="col-md-12">
+                        <h1>The Hangman Game:</h1>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <h2>Adult Beverages</h2>
+                    </div>
+                </div>
             </div>
         </header>
         <main>
@@ -126,15 +134,25 @@
             </div>
         </main>
         <footer>
-            <div class="middle center">
-                Nich Secord &copy;2019
-                <div class="social">
-                    <a href="https://www.github.com/mmcxii" target="new" class="social-link">
-                        <i class="fab fa-github"></i>
-                    </a>
-                    <a href="https://www.linkedin.com/in/mmcxii/" target="new" class="social-link">
-                        <i class="fab fa-linkedin-in"></i>
-                    </a>
+            <div class="container middle center">
+                <div class="row">
+                    <div class="col-md-12">
+                        Nich Secord &copy;2019
+                    </div>
+                </div>
+                <div class="row social">
+                    <div class="col-md-12">
+                        <a href="https://www.github.com/mmcxii" target="new" class="social-link">
+                            <i class="fab fa-github"></i>
+                        </a>
+                        <a
+                            href="https://www.linkedin.com/in/mmcxii/"
+                            target="new"
+                            class="social-link"
+                        >
+                            <i class="fab fa-linkedin-in"></i>
+                        </a>
+                    </div>
                 </div>
             </div>
         </footer>
