unified methods to create li's for each letter

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                                             <span id="current-word">
                                                 Current Word:
                                                 <br />
-                                                <span id="current-word-field"></span>
+                                                <ul id="current-word-field"></ul>
                                             </span>
                                         </div>
                                     </div>
@@ -110,7 +110,7 @@
                                             <span id="used-letters">
                                                 Letters Already Guessed:
                                                 <br />
-                                                <span id="used-letters-field"></span>
+                                                <ul id="used-letters-field"></ul>
                                             </span>
                                         </div>
                                     </div>
